# yomu

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/yomu-client/: Cargo.toml
crates/yomu-client/src/: lib.rs
crates/yomu-domain/: Cargo.toml
crates/yomu-domain/src/: api.rs  auth.rs  backup.rs  lib.rs  library.rs  progress.rs  publication.rs  source.rs
crates/yomu-server/: Cargo.toml  build.rs  yomu.example.toml
crates/yomu-server/migrations/: 0001_library.sql  0002_progress_seq.sql  0003_categories.sql  0004_auth.sql  0005_read_marks.sql  0006_progress_user_seq_index.sql  0007_chapter_published_at.sql  0008_catalog.sql  0009_genres.sql  0010_updates.sql  0011_publications.sql
crates/yomu-server/sources.d/: example.toml.sample
crates/yomu-server/src/: auth.rs  catalog.rs  config.rs  db.rs  downloader.rs  main.rs  notifier.rs  oidc.rs  state.rs  sync.rs  updater.rs
crates/yomu-server/src/api/: auth.rs  backup.rs  categories.rs  chapters.rs  downloads.rs  error.rs  library.rs  mod.rs  progress.rs  sources.rs  updates.rs
crates/yomu-server/src/db/: backup.rs  catalog.rs  categories.rs  chapters.rs  downloads.rs  manga.rs  mod.rs  progress.rs  publications.rs  read_marks.rs  units.rs  updates.rs  users.rs
crates/yomu-server/src/streamer/: files.rs  mod.rs
crates/yomu-shell/: Cargo.toml  icon.manifest.json  tauri.conf.json
crates/yomu-shell/capabilities/: default.json
crates/yomu-shell/src/: lib.rs  main.rs
crates/yomu-source/: Cargo.toml
crates/yomu-source/src/: dates.rs  lib.rs  local.rs  registry.rs  selector.rs
crates/yomu-source/tests/: selector_parse.rs
crates/yomu-source/tests/fixtures/: chapter.html  manga.html  search.html
crates/yomu-ui/: Cargo.toml
crates/yomu-ui/src/: chapter_actions.rs  cover.rs  format.rs  lib.rs  notify.rs  offline.rs  pager.rs  pull.rs
crates/yomu-ui/src/pages/: about.rs  downloads.rs  home.rs  library.rs  manga.rs  mod.rs  more.rs  reader.rs  search.rs  sources.rs
crates/yomu-ui/src/pages/reader/: gesture.rs  mod.rs  stages.rs
crates/yomu-web/: Cargo.toml  Trunk.toml  index.html  manifest.webmanifest  styles.css  sw.js
crates/yomu-web/src/: main.rs
docs/: ARCHITECTURE.md  HANDOFF.md  ROADMAP.md
docs/adr/: 0001-native-server-selector-sources.md  0002-progress-journal.md  0003-auth-single-or-oidc.md
docs/superpowers/plans/: 2026-07-10-android-immersive-reading.md  2026-07-10-catalog-cache.md  2026-07-10-chapter-dates.md  2026-07-10-chapter-download-ux.md  2026-07-10-cover-badges.md  2026-07-10-in-library-marks.md  2026-07-10-ntfy-notifications.md  2026-07-10-swipe-pager.md  2026-07-11-repo-review-fixes.md  2026-07-14-offline-ux.md  2026-07-15-download-progress-ring.md  2026-07-18-new-chapter-notifications.md  2026-07-18-unified-downloads.md  2026-07-19-download-queue-fixes.md  2026-07-19-home-more-cleanup.md  2026-07-23-unified-publications.md
docs/superpowers/specs/: 2026-07-07-offline-gate-design.md  2026-07-10-android-immersive-reading-design.md  2026-07-10-catalog-cache-design.md  2026-07-10-chapter-dates-design.md  2026-07-10-chapter-download-ux-design.md  2026-07-10-cover-badges-design.md  2026-07-10-in-library-marks-design.md  2026-07-10-ntfy-notifications-design.md  2026-07-10-reader-polish-design.md  2026-07-10-script-embedded-pages-design.md  2026-07-10-swipe-pager-design.md  2026-07-11-download-management-design.md  2026-07-11-genres-search-design.md  2026-07-14-offline-ux-design.md  2026-07-15-download-progress-ring-design.md  2026-07-18-new-chapter-notifications-design.md  2026-07-18-unified-downloads-design.md  2026-07-19-download-queue-fixes-design.md  2026-07-19-home-more-cleanup-design.md  2026-07-23-unified-publications-design.md
nix/: module.nix
