[package]
name = "yomu-client"
description = "Typed HTTP client for the yomu API (native + wasm)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
yomu-domain.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
