[package]
name = "yomu-server"
description = "yomu backend: manga library, downloader, progress tracking"
version.workspace = true
edition.workspace = true

[dependencies]
yomu-domain.workspace = true
yomu-source.workspace = true
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
figment.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v7"] }
