[package]
name = "yomu-server"
description = "yomu backend: manga library, downloader, progress tracking"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
yomu-domain.workspace = true
yomu-source.workspace = true
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
figment.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4", "v7"] }
base64.workspace = true
hex.workspace = true
reqwest.workspace = true
sha2.workspace = true
percent-encoding.workspace = true
regex.workspace = true
zip.workspace = true

[dev-dependencies]
tower = { workspace = true }
figment = { workspace = true, features = ["test"] }
