[package]
name = "yomu-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "yomu desktop/mobile shell (Tauri) around the shared web UI"

# Tauri's Android target builds this crate as a library.
[lib]
name = "yomu_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "yomu-shell"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
url.workspace = true
reqwest.workspace = true
