[package]
name = "yomu-ui"
description = "Leptos components and pages shared by web (and later desktop)"
version.workspace = true
edition.workspace = true

[dependencies]
yomu-domain.workspace = true
yomu-client.workspace = true
leptos.workspace = true
leptos_router.workspace = true
url.workspace = true
uuid.workspace = true
