[package]
name = "yomu-ui"
description = "Leptos components and pages shared by web (and later desktop)"
version.workspace = true
edition.workspace = true

[dependencies]
yomu-domain.workspace = true
yomu-client.workspace = true
chrono.workspace = true
leptos.workspace = true
leptos_router.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
uuid.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    "Window",
    "Storage",
    "Crypto",
    "Element",
    "HtmlElement",
    "Navigator",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "Touch",
    "TouchEvent",
    "TouchList",
]

[dependencies.js-sys]
version = "0.3"

[dependencies.wasm-bindgen-futures]
version = "0.4"

