[package]
name = "yomu-web"
description = "Web entrypoint: mounts yomu-ui in the browser (built by trunk)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
yomu-ui.workspace = true
console_error_panic_hook.workspace = true
js-sys = "0.3"
leptos.workspace = true
url.workspace = true
web-sys = { workspace = true, features = [
    "Window",
    "Location",
    "Navigator",
    "ServiceWorkerContainer",
    "Storage",
] }
